# Elden-Ring-Direct-X-Hook-mod

./: README.md
elden-x-main/: CMakeLists.txt  LICENSE.txt  README.md
elden-x-main/include/elden-x/: dl_allocator.hpp  game_man.hpp  graphics.hpp  messages.hpp  now_loading_helper.hpp  params.hpp  session.hpp  singletons.hpp  singletons.inl  steam_id.hpp  stl.hpp  task.hpp  task_groups.hpp  window.hpp
elden-x-main/include/elden-x/chr/: chr.hpp  chrset.hpp  player.hpp  world_chr_man.hpp
elden-x-main/include/elden-x/ezstate/: ezstate.hpp  talk_commands.hpp
elden-x-main/include/elden-x/gamedata/: game_data_man.hpp
elden-x-main/include/elden-x/menu/: generic_list_select_dialog.hpp  grid_control.hpp  menu_man.hpp  menu_window.hpp  popup_menu.hpp
elden-x-main/include/elden-x/paramdef/: ACTIONBUTTON_PARAM_ST.hpp  AI_ANIM_TBL_PARAM.hpp  AI_ATTACK_PARAM_ST.hpp  AI_ODDS_PARAM.hpp  AI_SOUND_PARAM_ST.hpp  AI_STANDARD_INFO_BANK.hpp  ASSET_GEOMETORY_PARAM_ST.hpp  ASSET_MATERIAL_SFX_PARAM_ST.hpp  ASSET_MODEL_SFX_PARAM_ST.hpp  ATK_PARAM_ST.hpp  ATTACK_ELEMENT_CORRECT_PARAM_ST.hpp  AUTO_CREATE_ENV_SOUND_PARAM_ST.hpp  BASECHR_SELECT_MENU_PARAM_ST.hpp  BEHAVIOR_PARAM_ST.hpp  BONFIRE_WARP_PARAM_ST.hpp  BONFIRE_WARP_SUB_CATEGORY_PARAM_ST.hpp  BONFIRE_WARP_TAB_PARAM_ST.hpp  BUDDY_PARAM_ST.hpp  BUDDY_STONE_PARAM_ST.hpp  BUDGET_PARAM_ST.hpp  BULLET_CREATE_LIMIT_PARAM_ST.hpp  BULLET_PARAM_ST.hpp  CACL_CORRECT_GRAPH_ST.hpp  CAMERA_FADE_PARAM_ST.hpp  CEREMONY_PARAM_ST.hpp  CHARACTER_INIT_PARAM.hpp  CHARMAKEMENUTOP_PARAM_ST.hpp  CHARMAKEMENU_LISTITEM_PARAM_ST.hpp  CHR_ACTIVATE_CONDITION_PARAM_ST.hpp  (+166 more)
elden-x-main/src/elden-x/: game_man.cpp  graphics.cpp  messages.cpp  singletons.cpp  task.cpp
(+27 files in other folders)
